last update for close

--- a/components/Summary/index.module.scss
+++ b/components/Summary/index.module.scss
@@ -1,151 +1,145 @@
 .btnArea {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 15px;
-    align-items: center;
-    .btn {
-        width: 100px;
-        height: 30px;
-        border-radius: 5px;
-        font-size: 14px;
-        font-weight: 500;
-        color: #F0F3F2;
-        border: none;
-        cursor: pointer;
-        &.backBtn {
-            background: #43B69A;
-            margin-right: 10px;
-        }
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 15px;
+  align-items: center;
+  .btn {
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #f0f3f2;
+    border: none;
+    cursor: pointer;
+    &.backBtn {
+      background: #43b69a;
+      margin-right: 10px;
     }
-
+  }
 }
 .lineChart {
-    width: 100%;
-    min-height: 300px;
-    height: auto;
-    margin-bottom: 30px;
+  width: 100%;
+  min-height: 300px;
+  height: auto;
+  margin-bottom: 30px;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 
-
-.memberName {
+  .memberName {
     font-size: 40px;
     text-align: center;
-    padding:  40px 0 30px 0;
+    padding: 40px 0 30px 0;
     color: #313131;
+  }
 
-}
-
-.boxSection {
+  .boxSection {
     width: 100%;
     margin: 0 0 20px 0;
-    border: 1px solid #DEE1E7;
-    background-color: #FBFCFF;
+    border: 1px solid #dee1e7;
+    background-color: #fbfcff;
     .inner {
-        padding: 50px;
+      padding: 50px;
+      width: 100%;
+      .label {
+        font-size: 24px;
+        color: #313131;
         width: 100%;
-        .label {
-            font-size: 24px;
-            color: #313131;
-            width: 100%;
-            display: block;
-            margin-bottom: 20px;
-        }
+        display: block;
+        margin-bottom: 20px;
+      }
     }
-}
-.col2 {
+  }
+  .col2 {
     &.half {
-        .left {
-            width: calc(50% - 12px); 
-            margin-right: 12px;
-        }
-        .right {
-            width: calc(50% - 12px); 
-            margin-left: 12px;
-        }
+      .left {
+        width: calc(50% - 12px);
+        margin-right: 12px;
+      }
+      .right {
+        width: calc(50% - 12px);
+        margin-left: 12px;
+      }
     }
     &.asymc {
-        .left {
-            width: calc(70% - 12px); 
-            margin-right: 12px;
-        }
-        .right {
-            width: calc(30% - 12px); 
-            margin-left: 12px;
-        }
+      .left {
+        width: calc(70% - 12px);
+        margin-right: 12px;
+      }
+      .right {
+        width: calc(30% - 12px);
+        margin-left: 12px;
+      }
     }
-}
-.demandAmount {
+  }
+  .demandAmount {
     width: 100%;
     margin: 0 0 20px 0;
     .label {
-        h2 {
-            font-size: 24px;
-            span {
-                margin-left: 5px;
-                color: #EE6161;
-                font-size: 20px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: normal;
-                letter-spacing: -1px;
-            }
+      h2 {
+        font-size: 22px;
+        letter-spacing: 1px;
+        span {
+          margin-left: 5px;
+          color: #ee6161;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          letter-spacing: -1px;
         }
+      }
     }
     .countup {
-        position: relative; 
-        
-        label {
-            color: #313131;
-            font-family: NanumGothic;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
+      position: relative;
+
+      label {
+        color: #313131;
+        font-family: NanumGothic;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+      > span {
+        display: flex;
+        align-items: baseline;
+        font-size: 24px;
+        color: #43b69a;
+        div {
+          font-size: 50px;
+          font-weight: 600;
+          letter-spacing: 1px;
+          margin-right: 10px;
+          color: #313131;
         }
-        > span {
-            display:flex;
-            align-items: baseline;
-            font-size: 30px;
-            color: #43B69A;
-            div {
-            font-size: 60px;
-            font-weight: bold;
-            letter-spacing: -1px;
-            margin-right: 10px;
-            color: #313131;
-        }
-        }
+      }
     }
-}
-.trendMonth {
+  }
+  .trendMonth {
     width: 100%;
     margin: 0 0 20px 0;
     .lineChart {
-        margin-bottom: 100px;
+      margin-bottom: 100px;
     }
     .trendMonthTable {
     }
-}
-.rank {
+  }
+  .rank {
     width: 100%;
-  
-}   
-.perMonth {
+  }
+  .perMonth {
     width: 100%;
-  
-}   
-.perWeek {
+  }
+  .perWeek {
     width: 100%;
-  
-}   
-.perDay {
+  }
+  .perDay {
     width: 100%;
-}   
-
+  }
 }
