--- a/components/Tables/TableBody.module.scss
+++ b/components/Tables/TableBody.module.scss
@@ -101,6 +101,12 @@
         svg {
           margin-left: 8px;
         }
+        span {
+          margin-left: 15px;
+          padding-top: 5px;
+          font-size: 10px;
+          vertical-align: baseline;
+        }
       }
 
       .statusName {
